--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
+    "@pnotify/core": "^5.2.0",
     "@webpack-cli/serve": "^1.2.1",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
@@ -50,7 +51,12 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "basiclightbox": "^5.0.4",
     "core-js": "^3.6.5",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "lodash.debounce": "^4.0.8",
+    "material-design-icon-fonts": "^3.0.1",
+    "material-design-icons": "^3.0.1"
   }
 }
